--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10579,8 +10579,8 @@ hr.small {
 
 .masthead {
   position: relative;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.8)), to(rgba(0, 0, 0, 0.7))), url("../assets/img/bg-masthead.jpg");
-  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.7)), url("../assets/img/bg-masthead.jpg");
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.8)), to(rgba(0, 0, 0, 0.7))), url("../assets/img/math-xMfp5hVmJVw-unsplash.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.7)), url("../assets/img/math-xMfp5hVmJVw-unsplash.jpg");
   background-size: cover;
   background-position: center;
   background-attachment: scroll;
@@ -10717,6 +10717,20 @@ hr.small {
   font-size: 2rem;
   line-height: 1.25;
 }
+
+.callout2 {
+    padding: 6.25rem 0;
+    background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.4))), url("../assets/img/andrew-neel-cckf4TsHAuw-unsplash.jpg");
+    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../assets/img/andrew-neel-cckf4TsHAuw-unsplash.jpg");
+    background-size: cover;
+    background-position: center;
+    background-attachment: scroll;
+}
+.callout2 .callout-text {
+    font-size: 2rem;
+    line-height: 1.25;
+}
+
 @media (min-width: 992px) {
   .callout {
     background-attachment: fixed;
@@ -10724,6 +10738,12 @@ hr.small {
   .callout .callout-text {
     font-size: 2.5rem;
   }
+    .callout2 {
+        background-attachment: fixed;
+    }
+    .callout2 .callout-text {
+        font-size: 2.5rem;
+    }
 }
 
 @media (min-width: 992px) {
